Stable checkpoint with module rework allowing nested modules, and moduels with script module sub moduels